# rint

./: CHANGELOG.md  Cargo.toml  README.md
src/: estimate.rs  integration.rs  lib.rs  limits.rs
src/integration/: adaptive.rs  basic.rs  estimate.rs  mod.rs  singularity.rs  workspace.rs
src/multi/: adaptive.rs  basic.rs  generator.rs  geometry.rs  integrator.rs  mod.rs  region.rs  rule.rs
src/multi/rule/: fully_symmetric_07.rs  fully_symmetric_09.rs  fully_symmetric_09_2d.rs  fully_symmetric_11_3d.rs  fully_symmetric_13_2d.rs
src/non_adaptive/: gauss_kronrod_15.rs  gauss_kronrod_21.rs  gauss_kronrod_31.rs  gauss_kronrod_41.rs  gauss_kronrod_51.rs  gauss_kronrod_61.rs  integration.rs  mod.rs
src/quadrature/: adaptive.rs  basic.rs  estimate.rs  integrator.rs  mod.rs  region.rs  rule.rs  singularity.rs
src/quadrature/rule/: gauss_kronrod_15.rs  gauss_kronrod_21.rs  gauss_kronrod_31.rs  gauss_kronrod_41.rs  gauss_kronrod_51.rs  gauss_kronrod_61.rs
src/quadrature/tests/: adaptive_error_tests.rs  mod.rs  positive_function_with_singularity.rs  util.rs  (+2 more)
src/rule/: gauss_kronrod_15.rs  gauss_kronrod_21.rs  gauss_kronrod_31.rs  gauss_kronrod_41.rs  gauss_kronrod_51.rs  gauss_kronrod_61.rs  mod.rs
tests/: adaptive-smooth-positive-function.rs  adaptive_integration_tests.rs  basic_integration_tests.rs  basic_integration_tests_complex.rs  catalan_adaptive.rs  catalan_basic.rs  catalan_singularity.rs  multi_dimensional_van_booren_tests.rs  positive_function_with_singularity.rs  singularity_integration_tests.rs  smooth_oscillating_function_unsymmetric_range.rs  smooth_positive_function.rs
tests/util/: macros.rs  mod.rs  multi.rs
