[package]
name = "rint"
description = "A pure Rust library for the numerical integration of real or complex valued functions of real variables in multiple dimensions."
authors = ["Zander Macleod <zmacleod@pm.me>"]
version = "0.1.2"
edition = "2021"
rust-version = "1.86"

readme = "README.md"
license = "GPL-3.0-or-later"

repository = "https://github.com/zjmacleod/rint"
keywords = ["integration", "numerical", "adaptive", "math", "quadrature"]
categories = ["mathematics", "science", "algorithms"]

include = ["/src", "/tests", "katex-header.html"]

[dependencies]
num-complex = "0.4.6"
num-traits = "0.2.19"

[profile.bench]
debug = true

[profile.release]
debug = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
